--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div class="container">
         <h1>Generate a <span class="greentext">random password!</span></h1>
         <p id="hint">(Never use an insecure password again!)</p>
         <button class="genbutton" onclick=" generatePassword() ">Generate  password!</button>
@@ -13,5 +14,6 @@
         </div>
         <p id="line"></p>
         <script src="index.js"></script>
+        </div>
     </body>
 </html>
